# pvt-characterization-lab

./: .gitignore  Makefile  main.py  pyproject.toml
data/: PV Solar Cell Spectral Response and AM1.5D Spectra.csv  PV Solar Cell Spectral Response and AM1.5D Spectra.xlsx  am1-5g.csv
data/spectrometer-and-final/: Nov 15, 2022 12-37-26 PM.picolog  air.txt  glycerol.txt  rhodaine-2pc.txt  rhodamine-2pc.csv  spectral_data.csv  water.txt
picolog/: Nov 14, 2022 11-09-51 AM.picolog  Nov 14, 2022 12-11-44 PM.picolog  Nov 14, 2022 3-15-46 PM.picolog  Nov 14, 2022 4-22-09 PM.picolog  Nov 15, 2022 11-51-17 AM.picolog  glycerol.csv  lumogen-f-rot-2pc.csv
pvt-data/cooling/: Device 1 J-V Data (10).csv  Device 1 J-V Data (11).csv  Device 1 J-V Data (13).csv  Device 1 J-V Data (3).csv  Device 1 J-V Data (4).csv  Device 1 J-V Data (6).csv  Device 1 J-V Data (7).csv  Device 1 Light Temperature Data (12).csv  Device 1 Light Temperature Data (2).csv  Device 1 Light Temperature Data (3).csv  Device 1 Light Temperature Data (5).csv  Device 1 Light Temperature Data (9).csv  Device 1 Light Temperature Data.csv  Device 1 Metrics (11).csv  Device 1 Metrics (12).csv  Device 1 Metrics (4).csv  Device 1 Metrics (5).csv  Device 1 Metrics (6).csv  Device 1 Metrics (7).csv  Device 1 Metrics (8).csv
pvt-data/glycerol/: Device 1 J-V Data (12).csv  Device 1 J-V Data (14).csv  Device 1 J-V Data (3).csv  Device 1 J-V Data (4).csv  Device 1 J-V Data (5).csv  Device 1 J-V Data (7).csv  Device 1 Metrics (10).csv  (+13 more)
src/: electrical_and_thermal_power.py  result_plotters.py  transmittance_plotter.py
(+337 files in other folders)
