[tool.poetry]
name = "Week 4 - PVT Characterization"
version = "0.1.0"
description = ""
authors = ["Guy Keogh <C19413506@mytudublin.ie>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
scipy = "1.9.3"
matplotlib = "3.6.2"
plotly = "5.11.0"
pandas = "1.5.1"
kaleido = "0.2.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.10.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
